@@ -1322,7 +1322,7 @@ FixedData=ff 00 ff 00 ff 00 ff 00
 CmdTranslator=Translator(lsb,comp,0,8,0) Translator(1,2,8) Translator(2,1,11,1) Translator(2,1,15)
 CmdParms=OBC:8=0,Dev.Sub:0|1|2|3,Style :NEC1|NEC2|NECx1|NECx2=0
 CmdParmInit=PickInitializer(1,N0.1,N2.3,N4.5,N6.7)
-ImportCmdTranslator=Translator(0,2,8) NECStyleImporter(1)
+ImportCmdTranslator=Translator(0,2,8,0,-1) NECStyleImporter(1)
 DefaultCmd=00 20
 CmdIndex=0
 Notes=There are primarily 2 versions of the NEC protocol: NEC1 and NEC2. The difference between the two is in how the codes repeat when a button is held down. Even if you use the wrong version, it will probably still work, except that the codes won't repeat (or vice versa).\n\n\
@@ -1334,6 +1334,37 @@ NEC 2DEV/4DEV Combos:  These protocols allows you to combine 2 or 4 device/sub-d
 Code.S3C80=43 8B 82 8B 14 CF 44 08 08 01 18 01 06 01 18 03 39 D2 DC 11 94 08 B6 08 CA E6 10 02 08 0C 18 C0 56 C1 C0 F0 C1 E0 C1 06 C1 03 93 C1 03 E5 C1 04 E4 0B 05 E4 0B 06 60 06 37 0B 05 E4 03 04 60 04 37 06 05 F6 01 04 7B 09 37 09 0C 37 01 03 46 29 0D 46 29 01 8D 01 49 C4 22 1E 37 01 EE F6 01 49 E6 28 C1 60 03 E6 12 01 8B E7
 Code.6805-RC16/18=11 24 82 20 10 CF 44 08 08 00 8B 8D 01 8B A7 69 78 00 84 C9 65 AE 02 BF 66 B6 63 58 42 58 E6 5A B7 5A 43 0B 63 02 E6 5B B7 5B B6 62 B7 5C 43 B7 5D 07 63 05 CD 01 83 24 08 08 63 0A 00 63 02 16_7C 10_7C CC 01 B2 A6 44 B7_72 A6 64 B7_73 00 63 F0 AD F0 A6 C1 B7_7B 33 5A A6 01 B7_67 20 E2
 Code.HCS08=20 17 22 47 82 CF 44 08 08 01 17 01 1A 01 17 03 4D D2 F0 11 93 08 CA 08 C9 B6 69 B7 56 A4 C0 62 44 97 8C 9E CE 60 35 60 6E 02 A9 B6 68 B7 62 B7 63 33 63 0A 56 05 4E 60 61 33 61 07 56 05 CD FF 8F 25 0A 08 56 0C 00 56 04 14 A3 16 A3 10 A3 CC FF 5C 55 7A 35 76 00 56 ED CD FF 5C 6E C1 A2 33 60 6E 01 6A 20 E7
+
+[NEC 4DEV Yamaha Combo]
+PID=01 1A
+DevParms=Device 1,Sub Device 1=[-0],Device 2,Sub Device 2=[-2],Device3,Sub Device 3=[-4],Device 4,Sub Device 4=[-6]
+DeviceTranslator=Translator(lsb,comp,0,8,0) Translator(lsb,comp,1,8,8) \
+                 Translator(lsb,comp,2,8,16) Translator(lsb,comp,3,8,24) \
+                 Translator(lsb,comp,4,8,32) Translator(lsb,comp,5,8,40) \
+                 Translator(lsb,comp,6,8,48) Translator(lsb,comp,7,8,56)
+FixedData=ff 00 ff 00 ff 00 ff 00
+CmdParms=OBC:8=0,Dev.Sub:0|1|2|3,NStyle :NEC1|NEC2|NECx1|NECx2=0,YStyle :NEC|Y1|Y2|Y3=0
+CmdTranslator=Translator(lsb,comp,0,8,0) Translator(1,2,8) Translator(2,1,11,1) Translator(2,1,15) \
+			Translator(3,1,13,1) Translator(3,1,14)
+CmdParmInit=PickInitializer(1,N0.1,N2.3,N4.5,N6.7)
+ImportCmdTranslator=Translator(0,2,8,0,-1) NECStyleImporter(1) YamahaStyleImporter(2) 
+DefaultCmd=00 20
+CmdIndex=0
+Notes=Similar to NEC 4 DEV Combo, but can send Yamaha signals with 16 bits of data.\n\  
+NStyle selects among NEC1, NEC2, NECx1, and NECx2.\n\ 
+YStyle selects among the following:\n\
+NEC: sends the ordinary NEC signals (specified by NStyle) in which the second byte of data is the complement of the first byte.\n\ 
+ The two bytes of data always add to 255, which is standard for NEC signals. Normally only the first byte is specified.\n\
+Y1: sends NEC signals except the sum of the two bytes is 127.  Yamaha specifes both bytes. \n\
+Y2: sum is 254 or 256.\n\
+Y3: sum is 126 or 128.
+Code.S3C80=43 8B 82 8B 14 CF 44 08 08 01 18 01 06 01 18 03 39 D2 DC 11 94 08 B6 08 CA E6 10 02 08 0C 18 C0 \
+56 C1 C0 F0 C1 E0 C1 06 C1 03 93 C1 03 E5 C1 04 E4 0B 05 E4 0B 06 60 06 37 02 03 B6 06 01 37 04 03 B6 06 80 \
+37 06 05 F6 01 04 7B 09 37 09 0C 37 01 03 46 29 0D 46 29 01 8D 01 49 C4 22 1E 37 01 EE F6 01 49 E6 28 C1 60 \
+03 E6 12 01 8B E7
+Code.HCS08=20 17 22 47 82 CF 44 08 08 01 17 01 1A 01 17 03 4D D2 F0 11 93 08 CA 08 C9 B6 69 B7 56 A4 C0 62 44 \
+97 8C 9E CE 60 35 60 6E 02 A9 B6 68 B7 62 43 B7 63 03 56 04 A8 01 B7 63 07 56 05 CD FF 8F 25 0A 08 56 0C 00 56 \
+04 14 A3 16 A3 10 A3 CC FF 5C 55 7A 35 76 00 56 ED CD FF 5C 6E C1 A2 33 60 6E 01 6A 20 E7 
 
 [NEC1]
 OldNames=NEC Generic
